--- a/public/css/sass/abstracts/_variables.scss
+++ b/public/css/sass/abstracts/_variables.scss
@@ -1,12 +1,16 @@
 
     //color by default 
-    $color-profile2:#1380a1;
-    $color-profile3: #75bfd6;
-    $color-bgNav: linear-gradient(90deg, rgb(0, 21, 31) 10%, rgb(0, 43, 63) 30%, $color-profile3 50%);
-    $animated-text-fill-img:"animated-text-fill-blue.png";    
-    $logoImg:url(../images/logoBlue.png);
+    // $color-profile2:#1380a1;
+    // $color-profile3: #75bfd6;
+    // $color-bgNav: linear-gradient(90deg, rgb(0, 21, 31) 10%, rgb(0, 43, 63) 30%, $color-profile3 50%);
+    // $animated-text-fill-img:"animated-text-fill-orange.webp";    
+    // $logoImg:url(../images/logoBlue.png);
 
-    
+    $color-profile2:rgb(216, 163, 3);
+    $color-profile3: rgb(248, 197, 44);
+    $color-bgNav: linear-gradient(90deg, rgb(0, 21, 31) 10%, rgb(0, 43, 63) 30%, $color-profile3 50%);
+    $animated-text-fill-img:"animated-text-fill-orange.webp";    
+    $logoImg:url(../images/logoOrange.png);
     
 
 
