--- a/public/css/sass/layouts/_profile.scss
+++ b/public/css/sass/layouts/_profile.scss
@@ -7,7 +7,7 @@
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
-	
+	// background-color: ;
 	height: 100vh;
 	// width: 80%;
   }
