--- a/public/css/sass/layouts/_header.scss
+++ b/public/css/sass/layouts/_header.scss
@@ -60,9 +60,9 @@ a.active:not(.logo) {
     top:-50px;   
 }
 
-.scrolled {      
-    // background-image: $color-bgNav;     
-}
+// .scrolled {      
+//     background-image: $color-bgNav;     
+// }
 .collapsehide{
  display: none;
 }
