--- a/public/css/main.css
+++ b/public/css/main.css
@@ -244,8 +244,8 @@ h4, .logo {
 }
 
 .navbar a.logo {
-  content: url(../images/logoBlue.png);
-  width: 120px;
+  content: url(../images/logoOrange.png);
+  width: 140px;
 }
 
 .navbar li a {
@@ -266,14 +266,14 @@ h4, .logo {
   left: 0;
   width: 100%;
   height: 3px;
-  background-color: #1380a1;
+  background-color: #b18502;
   transform: scaleX(0);
   transform-origin: right;
   transition: all 0.5s;
 }
 
 .navbar li a:hover {
-  color: #1380a1;
+  color: #b18502;
 }
 
 .navbar li a:hover::after {
@@ -282,15 +282,15 @@ h4, .logo {
 }
 
 a.active:not(.logo) {
-  color: #1380a1;
+  color: #b18502;
 }
 
 .invisible {
   top: -50px;
 }
 
-.collapsehide {
-  display: none;
+.scrolled {
+  background-image: linear-gradient(90deg, #271d01 10%, #b18502 30%, #d8a306 50%);
 }
 
 .parallax-wrapper {
@@ -430,7 +430,7 @@ a.active:not(.logo) {
 }
 
 .twoButtons div:hover a {
-  color: #1380a1;
+  color: #b18502;
   opacity: 1;
 }
 
@@ -446,7 +446,7 @@ a.active:not(.logo) {
   display: flex;
   justify-content: center;
   top: 80px;
-  color: #1380a1;
+  color: #b18502;
   opacity: .6;
   font-weight: bold;
   line-height: 20px;
@@ -683,7 +683,7 @@ a.active:not(.logo) {
 }
 
 .skills-bar-container li .bar-container {
-  background-color: rgba(19, 128, 161, 0.5);
+  background-color: rgba(177, 133, 2, 0.5);
   position: relative;
   width: 100%;
   height: 5px;
@@ -693,7 +693,7 @@ a.active:not(.logo) {
 }
 
 .skills-bar-container li .bar-container .progressbar {
-  background-color: #1380a1;
+  background-color: #b18502;
   position: absolute;
   width: 0%;
   height: 100%;
@@ -869,13 +869,13 @@ a.active:not(.logo) {
   font-weight: 600;
   line-height: 1;
   text-transform: uppercase;
-  color: #75bfd6;
+  color: #d8a306;
   margin-bottom: 5px;
   transition: all 0.3s ease-in-out;
 }
 
 .portfolio #portfolio-menu li:hover, .portfolio #portfolio-menu li.filter-active {
-  color: #1380a1;
+  color: #b18502;
 }
 
 .portfolio #portfolio-menu li:last-child {
@@ -908,7 +908,7 @@ a.active:not(.logo) {
   position: absolute;
   width: 100%;
   height: 30%;
-  background: rgba(19, 128, 161, 0.7);
+  background: rgba(177, 133, 2, 0.7);
   left: 0;
   bottom: -100%;
   padding: 20px;
@@ -928,7 +928,7 @@ a.active:not(.logo) {
 }
 
 .cardbg {
-  background-color: #1380a1 !important;
+  background-color: #b18502 !important;
 }
 
 /*--------------------------------------------------------------
@@ -981,7 +981,7 @@ a.active:not(.logo) {
   font-style: italic;
   margin: 0 15px 15px 15px;
   padding: 20px;
-  background: rgba(19, 128, 161, 0.1);
+  background: rgba(177, 133, 2, 0.2);
   position: relative;
   margin-top: 35px;
   border-radius: 6px;
@@ -1091,13 +1091,13 @@ header, footer {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px #1380a1;
+  box-shadow: inset 0 0 5px #b18502;
   border-radius: 10px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #1380a1;
+  background: #b18502;
   border-radius: 10px;
 }
 
@@ -1108,7 +1108,7 @@ html::-webkit-scrollbar {
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #75bfd6;
+  background: #d8a306;
 }
 
 /*--------------------------------------------------------------
@@ -1122,7 +1122,7 @@ html::-webkit-scrollbar {
   border-radius: 50px;
   right: 15px;
   bottom: 15px;
-  background: #1380a1;
+  background: #b18502;
   color: white;
   transition: all 0.5s ease-in-out;
   z-index: 50;
@@ -1136,7 +1136,7 @@ html::-webkit-scrollbar {
 }
 
 .back-to-top:hover {
-  background: #75bfd6;
+  background: #d8a306;
 }
 
 .flexrow {
@@ -1154,6 +1154,6 @@ html::-webkit-scrollbar {
 }
 
 .title {
-  color: #1380a1;
+  color: #b18502;
 }
 /*# sourceMappingURL=main.css.map */
