--- a/public/css/sass/abstracts/_variables.scss
+++ b/public/css/sass/abstracts/_variables.scss
@@ -5,21 +5,19 @@
     $color-profile2:#1380a1;
     $color-profile3: #75bfd6;
     $color-bgNav: linear-gradient(90deg, rgb(0, 21, 31) 10%, rgb(0, 43, 63) 30%, $color-profile3 50%);
-    $animated-text-fill-img:"animated-text-fill-orange.webp";    
+    $animated-text-fill-img:"animated-text-fill-blue.webp";    
     $logoImg:url(../images/logoBlue.png);
 
-    $blueTheme : false ;
-    $orangeTheme :true  ; 
-    $greenTheme :false  ;
+    
 
    @if ($blueTheme){
         $color-profile2:#1380a1;
         $color-profile3: #75bfd6;
         $color-bgNav: linear-gradient(90deg, rgb(0, 21, 31) 10%, rgb(0, 43, 63) 30%, $color-profile3 50%);
-        $animated-text-fill-img:"animated-text-fill-orange.webp";    
+        $animated-text-fill-img:"animated-text-fill-blue.webp";    
         $logoImg:url(../images/logoBlue.png);
     } @else if ($orangeTheme){
-        $color-profile2:rgb(177, 133, 2);
+        $color-profile2:#b18502;
         $color-profile3: rgb(216, 163, 6);
         $color-bgNav: linear-gradient(90deg, rgb(39, 29, 1) 10%, $color-profile2 30%, $color-profile3 50%);
         $animated-text-fill-img:"animated-text-fill-orange.webp";    
