--- a/public/css/main.css
+++ b/public/css/main.css
@@ -240,7 +240,6 @@ h4, .logo {
   position: fixed;
   top: 0;
   background-color: rgba(255, 255, 255, 0);
-  transition: 0.3s linear;
 }
 
 .navbar a.logo {
@@ -304,6 +303,10 @@ a.active:not(.logo) {
 
 .bgcolorMobilToggle {
   background-image: linear-gradient(90deg, #00151f 10%, #002b3f 30%, #75bfd6 50%);
+}
+
+.navbar {
+  transition: all 0.3s linear;
 }
 
 .parallax-wrapper {
