--- a/public/css/sass/layouts/_header.scss
+++ b/public/css/sass/layouts/_header.scss
@@ -50,7 +50,7 @@
     position: fixed;    
     top:0;
     background-color: rgba(255,255,255,0); // media query    
-    transition: 0.3s linear; 
+    
     // height: 80px;    
 }
 a.active:not(.logo) {
@@ -75,4 +75,9 @@ background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32
 
 .bgcolorMobilToggle{
   background-image: $color-bgNav;  
+
+}
+
+.navbar { // Chrome // Mozilla // Opera
+  transition: all 0.3s linear; 
 }
