--- a/public/css/sass/layouts/_header.scss
+++ b/public/css/sass/layouts/_header.scss
@@ -50,7 +50,7 @@
     position: fixed;    
     top:0;
     background-color: rgba(255,255,255,0); // media query    
-    
+    border: none;
     // height: 80px;    
 }
 a.active:not(.logo) {
