--- a/public/css/main.css
+++ b/public/css/main.css
@@ -240,7 +240,6 @@ h4, .logo {
   position: fixed;
   top: 0;
   background-color: rgba(255, 255, 255, 0);
-  border: none;
 }
 
 .navbar a.logo {
@@ -252,7 +251,7 @@ h4, .logo {
   position: relative;
   display: block;
   font-family: Lato, sans-serif;
-  color: #ecf0f1 !important;
+  color: white;
   text-decoration: none;
   text-transform: uppercase;
   transition: 0.5s;
@@ -266,14 +265,14 @@ h4, .logo {
   left: 0;
   width: 100%;
   height: 3px;
-  background-color: #016282;
+  background-color: white;
   transform: scaleX(0);
   transform-origin: right;
   transition: all 0.5s;
 }
 
 .navbar li a:hover {
-  color: #016282;
+  color: #07485e;
 }
 
 .navbar li a:hover::after {
@@ -282,7 +281,7 @@ h4, .logo {
 }
 
 a.active:not(.logo) {
-  color: #016282;
+  color: #07485e;
 }
 
 .invisible {
@@ -290,7 +289,7 @@ a.active:not(.logo) {
 }
 
 .scrolled {
-  background-image: linear-gradient(90deg, #00151f 10%, #002b3f 30%, #76a7b8 50%);
+  background-image: linear-gradient(90deg, #00151f 10%, #002b3f 30%, #02769B 50%);
   box-shadow: 0px 7px 15px -7px #000000;
 }
 
@@ -303,10 +302,11 @@ a.active:not(.logo) {
 }
 
 .bgcolorMobilToggle {
-  background-image: linear-gradient(90deg, #00151f 10%, #002b3f 30%, #76a7b8 50%);
+  background-image: linear-gradient(90deg, #00151f 10%, #002b3f 30%, #02769B 50%);
+  transition: all 0.3s linear;
 }
 
-.navbar-collapse, .navbar.bgcolorMobilToggle, .navbar {
+.navbar-collapse, .navbar {
   transition: all 0.3s linear;
 }
 
@@ -447,7 +447,7 @@ a.active:not(.logo) {
 }
 
 .twoButtons div:hover a {
-  color: #016282;
+  color: #07485e;
   opacity: 1;
 }
 
@@ -463,7 +463,7 @@ a.active:not(.logo) {
   display: flex;
   justify-content: center;
   top: 80px;
-  color: #016282;
+  color: #07485e;
   opacity: .6;
   font-weight: bold;
   line-height: 20px;
@@ -700,7 +700,7 @@ a.active:not(.logo) {
 }
 
 .skills-bar-container li .bar-container {
-  background-color: rgba(1, 98, 130, 0.5);
+  background-color: rgba(7, 72, 94, 0.5);
   position: relative;
   width: 100%;
   height: 5px;
@@ -710,7 +710,7 @@ a.active:not(.logo) {
 }
 
 .skills-bar-container li .bar-container .progressbar {
-  background-color: #016282;
+  background-color: #07485e;
   position: absolute;
   width: 0%;
   height: 100%;
@@ -886,13 +886,13 @@ a.active:not(.logo) {
   font-weight: 600;
   line-height: 1;
   text-transform: uppercase;
-  color: #76a7b8;
+  color: #02769B;
   margin-bottom: 5px;
   transition: all 0.3s ease-in-out;
 }
 
 .portfolio #portfolio-menu li:hover, .portfolio #portfolio-menu li.filter-active {
-  color: #016282;
+  color: #07485e;
 }
 
 .portfolio #portfolio-menu li:last-child {
@@ -925,7 +925,7 @@ a.active:not(.logo) {
   position: absolute;
   width: 100%;
   height: 30%;
-  background: rgba(1, 98, 130, 0.7);
+  background: rgba(7, 72, 94, 0.7);
   left: 0;
   bottom: -100%;
   padding: 20px;
@@ -945,7 +945,7 @@ a.active:not(.logo) {
 }
 
 .cardbg {
-  background-color: #016282 !important;
+  background-color: #07485e !important;
 }
 
 /*--------------------------------------------------------------
@@ -998,7 +998,7 @@ a.active:not(.logo) {
   font-style: italic;
   margin: 0 15px 15px 15px;
   padding: 20px;
-  background: rgba(1, 98, 130, 0.2);
+  background: rgba(7, 72, 94, 0.2);
   position: relative;
   margin-top: 35px;
   border-radius: 6px;
@@ -1102,13 +1102,13 @@ header, footer {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px #016282;
+  box-shadow: inset 0 0 5px #07485e;
   border-radius: 10px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #016282;
+  background: #07485e;
   border-radius: 10px;
 }
 
@@ -1119,7 +1119,7 @@ html::-webkit-scrollbar {
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #76a7b8;
+  background: #02769B;
 }
 
 /*--------------------------------------------------------------
@@ -1133,7 +1133,7 @@ html::-webkit-scrollbar {
   border-radius: 50px;
   right: 15px;
   bottom: 15px;
-  background: #016282;
+  background: #07485e;
   color: white;
   transition: all 0.5s ease-in-out;
   z-index: 50;
@@ -1147,7 +1147,7 @@ html::-webkit-scrollbar {
 }
 
 .back-to-top:hover {
-  background: #76a7b8;
+  background: #02769B;
 }
 
 .flexrow {
@@ -1165,6 +1165,6 @@ html::-webkit-scrollbar {
 }
 
 .title {
-  color: #016282;
+  color: #07485e;
 }
 /*# sourceMappingURL=main.css.map */
