--- a/public/css/sass/abstracts/_variables.scss
+++ b/public/css/sass/abstracts/_variables.scss
@@ -2,8 +2,8 @@
     @import "./_themes.js";
 
     // color by default 
-    $color-profile2:rgb(1,98,130);
-    $color-profile3: rgb(118, 167, 184);
+    $color-profile2:rgb(7, 72, 94);
+    $color-profile3: #02769B;
     $color-bgNav: linear-gradient(90deg, rgb(0, 21, 31) 10%, rgb(0, 43, 63) 30%, $color-profile3 50%);
     $animated-text-fill-img:"animated-text-fill-blue.webp";    
     $logoImg:url(../images/logoBlue.png);
@@ -11,8 +11,8 @@
     
 
    @if ($blueTheme){
-    $color-profile2:rgb(1,98,130);
-    $color-profile3: rgb(118, 167, 184);
+    $color-profile2:rgb(7, 72, 94);
+    $color-profile3: #02769B;
     $color-bgNav: linear-gradient(90deg, rgb(0, 21, 31) 10%, rgb(0, 43, 63) 30%, $color-profile3 50%);
     $animated-text-fill-img:"animated-text-fill-blue.webp";    
     $logoImg:url(../images/logoBlue.png);
