--- a/public/css/sass/layouts/_header.scss
+++ b/public/css/sass/layouts/_header.scss
@@ -18,7 +18,7 @@
           position: relative;
           display: block;
           font-family: Lato, sans-serif;
-          color: #ecf0f1 !important;
+          color: $color-profile1;    
           text-decoration: none;
           text-transform: uppercase;
           transition: 0.5s;
@@ -31,7 +31,7 @@
             left: 0;
             width: 100%;
             height: 3px;
-            background-color: $color-profile2;
+            background-color: $color-profile1;
             transform: scaleX(0);
             transform-origin: right;
             transition: all 0.5s;
@@ -50,7 +50,7 @@
     position: fixed;    
     top:0;
     background-color: rgba(255,255,255,0); // media query    
-    border: none;
+    
     // height: 80px;    
 }
 a.active:not(.logo) {
@@ -75,9 +75,9 @@ background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32
 
 .bgcolorMobilToggle{
   background-image: $color-bgNav;  
-
+  transition: all 0.3s linear; 
 }
 
-.navbar-collapse,.navbar.bgcolorMobilToggle,.navbar { // Chrome // Mozilla // Opera
+ .navbar-collapse,.navbar { // Chrome // Mozilla // Opera
   transition: all 0.3s linear; 
 }
