--- a/public/css/main.css
+++ b/public/css/main.css
@@ -667,6 +667,10 @@ a.active:not(.logo) {
   width: 100%;
 }
 
+#apropos p {
+  line-height: 24px !important;
+}
+
 .container-skills {
   width: 100%;
   flex-wrap: wrap;
