--- a/public/css/sass/layouts/_apropos.scss
+++ b/public/css/sass/layouts/_apropos.scss
@@ -1,3 +1,10 @@
-#apropos img{
-    width: 100%;
+#apropos {
+    img{
+        width: 100%;
+    }
+    p{
+        line-height: 24px !important;
+    }
 }
+
+
